--- a/style/responsive.css
+++ b/style/responsive.css
@@ -1,37 +1,78 @@
-@media screen and (max-width:1000px) {
-    header .container {
-        display: flex;
-        flex-direction: column;
-    }
+@media screen and (max-width: 1000px) {
+  header .container {
+    display: flex;
+    flex-direction: column;
+  }
 
-    main .container .titulo {
-        font-size: 35px;
-    }
+  main .container .titulo {
+    font-size: 35px;
+    margin-top: 100px;
+  }
 
-    main .container .descricao {
-        font-size: 15px;
-    }
+  .container .topicos-menu {
+    font-size: 12px;
+    padding: 5px;
+  }
 
-    .filme-principal {
-        background-size: cover;
-        width: 100%;
-    }
+  main .container .descricao {
+    font-size: 15px;
+  }
 
-    .filme-principal .container {
-        width: 70%;
-    }
+  main .container .descricao2 {
+    font-size: 15px;
+    font-weight: bold;
+  }
 
-    .botao {
-        margin-top: 5px;
-        font-size: 12px;
-        padding: 10px 10px;
-        width: 50%;
-    }
 
-}
+  .principal {
+    background-size: cover;
+    width: 100%;
+  }
 
-@media screen and (min-width:1000px) {
-    .filme-principal .descricao {
-        width: 50%;
-    }
+  .principal .container {
+    width: 70%;
+  }
+
+  .botao {
+    font-size: 12px;
+    padding: 10px 10px;
+    width: 50%;
+    margin-bottom: 8px;
+  }
+
+  .experiencias .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+  }
+
+  .formacao-tech .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+  }
+
+  .botao-cv {
+      width: 40%;
+      margin-left: 180px;
+      font-size: 15px;
+  }
+
+  .contato .container-contato ul {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .contato .container-contato ul a li {
+      font-size: 15px;
+      padding: 10px;
+  }
+
+
+@media screen and (min-width: 1000px) {
+  .filme-principal .descricao {
+    width: 50%;
+  }
 }
