--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,5 @@
 :root {
   --preta: #141414;
-  --azul: #10375d;
-  --vermelha: #c2331a;
   --fundo-claro: #fefefa;
 }
 
@@ -83,7 +81,7 @@ header nav a:hover {
 .principal {
   font-size: 16px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) 100%),
-    url("../img/fundo2.png");
+    url("../img/fundo1.jpg");
 
   background-size: cover;
 
@@ -107,6 +105,10 @@ header nav a:hover {
   margin-bottom: 40px;
   margin-top: 30px;
   margin-left: 6px;
+}
+
+.principal .descricao2 {
+  font-weight: bold;
 }
 
 .principal .posicao {
@@ -184,6 +186,20 @@ header nav a:hover {
 .item2 {
   width: 100%;
   position: relative;
+}
+
+.nome-projeto {
+  text-align: center;
+  font-size: 13px;
+  font-weight: 100;
+  letter-spacing: 0.08em;
+
+  padding: 1px;
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  left: 36%;
+  top: 81%;
 }
 
 .link-github {
@@ -297,7 +313,12 @@ header nav a:hover {
 }
 
 /*  pessoais */
-
+.item2 .interesse {
+  text-align: center;
+  padding: 10px;
+  font-weight: bold;
+  letter-spacing: 0.05em;
+}
 /* contato */
 
 .contato {
