--- a/style/responsive.css
+++ b/style/responsive.css
@@ -2,16 +2,47 @@
   header .container {
     display: flex;
     flex-direction: column;
+    height: 110px;
+    text-align: center;
   }
 
-  main .container .titulo {
-    font-size: 35px;
-    margin-top: 100px;
+  header .jaque,
+  header .fontes {
+    font-size: 20px;
+    margin-bottom: 8px;
+  }
+
+  header .jaque {
+    margin-left: -19px;
   }
 
   .container .topicos-menu {
-    font-size: 12px;
+    font-size: 14px;
     padding: 5px;
+    margin-left: 30px;
+  }
+
+  .container .topicos-menu a {
+    width: 150px;
+    display: block;
+    float: left;
+    padding-bottom: 10px;
+    text-align: center;
+  }
+
+  .container .topicos-menu a:after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 1px;
+    background: salmon;
+    margin: 0px auto;
+  }
+
+  main .container .titulo {
+    font-size: 30px;
+    margin-top: 130px;
+    margin-left: 5px;
   }
 
   main .container .descricao {
@@ -22,7 +53,6 @@
     font-size: 15px;
     font-weight: bold;
   }
-
 
   .principal {
     background-size: cover;
@@ -55,9 +85,9 @@
   }
 
   .botao-cv {
-      width: 40%;
-      margin-left: 180px;
-      font-size: 15px;
+    width: 50%;
+    margin-left: 120px;
+    font-size: 15px;
   }
 
   .contato .container-contato ul {
@@ -66,13 +96,7 @@
   }
 
   .contato .container-contato ul a li {
-      font-size: 15px;
-      padding: 10px;
-  }
-
-
-@media screen and (min-width: 1000px) {
-  .filme-principal .descricao {
-    width: 50%;
+    font-size: 15px;
+    padding: 10px;
   }
 }
